--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.003	2015-08-17
+	* Replace powers of 2 table with bit fiddling.
+	(cleaner, a bit faster, and more obscure at the same time!!!!)
+
 0.002   2015-08-12
         * Improve portability. (Rafael Garcia Suarez)
         * Added this Changelog.
